--- a/vacancies/templates/vacancies/apply_for_vacancy.html
+++ b/vacancies/templates/vacancies/apply_for_vacancy.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>Auf Leerstelle bewerben</h1>
-    <p>Leerstelle gehört zur Gruppe: <a href="{{ vacancy.group.get_absolute_url }}">{{ vacancy.group.name }}</a></p>
+    <p>Leerstelle gehört zu: <a href="{{ vacancy.target.get_absolute_url }}">{{ vacancy.target }}</a></p>
     <p>Beschreibung: {{ vacancy.description }}</p>
     <p>Erzählen Sie etwas über sich:</p>
     <form method="post">
