--- a/vacancies/templates/vacancies/review_vacancy.html
+++ b/vacancies/templates/vacancies/review_vacancy.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>Bewerbungen</h1>
-    <p>Gehört zu <a href="{{ vacancy.group.get_absolute_url }}">{{ vacancy.group }}</a></p>
+    <p>Gehört zu <a href="{{ vacancy.target.get_absolute_url }}">{{ vacancy.target }}</a></p>
     <h2>Leerstellenbeschreibung:</h2>
     <p>{{ vacancy.description|linebreaks }}</p>
     <h2>Bewerbungen</h2>
@@ -15,7 +15,7 @@
             <th>Nachricht</th>
             <th>Alter (Geschlecht)</th>
             <th>Chat</th>
-            {% if user == vacancy.group.admin %}
+            {% if user == vacancy.target.admin %}
                 <th>Aktion</th>
             {% endif %}
         </tr>
@@ -25,13 +25,13 @@
                 <td>{{ application.user.location }}</td>
                 <td>{{ application.message }}</td>
                 <td>{{ application.user.get_age }} ({{ application.user.sex }})</td>
-                <td><a href="{% url 'chat:chat_room' 'usergroups' 'application' application.id %}">Zum Chat</a></td>
-                {% if user == vacancy.group.admin %}
+                <td><a href="{% url 'chat:chat_room' 'vacancies' 'application' application.id %}">Zum Chat</a></td>
+                {% if user == vacancy.target.admin %}
                     <td>
                         {% if application.status == 'pending' %}
-                            <a href="{% url 'usergroups:accept_application' application.id %}">Annehmen</a> | <a href="{% url 'usergroups:decline_application' application.id %}">Ablehnen</a>
+                            <a href="{% url 'vacancies:accept_application' application.id %}">Annehmen</a> | <a href="{% url 'vacancies:decline_application' application.id %}">Ablehnen</a>
                         {% else %}
-                            <a href="{% url 'usergroups:delete_application' application.id %}">Löschen</a>
+                            <a href="{% url 'vacancies:delete_application' application.id %}">Löschen</a>
                         {% endif %}
                     </td>
                 {% endif %}
