--- a/vacancies/templates/vacancies/vacancy_list.html
+++ b/vacancies/templates/vacancies/vacancy_list.html
@@ -9,7 +9,7 @@
         <th>Aktion</th>
     </tr>
     {% for vacancy in target.vacancies.all %}
-    {% with status=application_dict|lookup:vacancy.id %}
+    {% with status=user.application_dict|lookup:vacancy.id %}
         <tr>
             <td>{{ vacancy.description }}</td>
             <td>{{ vacancy.location_component_value }}</td>
