--- a/usergroups/templates/usergroups/invitation_list.html
+++ b/usergroups/templates/usergroups/invitation_list.html
@@ -8,11 +8,11 @@
     </tr>
     {% for invitation in group.invitations.all %}
         <tr>
-            <td><a href="{{ invitation.user.get_absolute_url }}">{{ invitation.user.username }}</a></td>
+            <td><a href="{{ invitation.user.get_absolute_url }}">{{ invitation.target.username }}</a></td>
             <td>{{ invitation.message }}</td>
             <td>
                 {% if user == group.admin %}
-                    <a href="{% url 'usergroups:delete_invitation' invitation.id %}">Löschen</a>
+                    <a href="{% url 'vacancies:delete_invitation' invitation.id %}">Löschen</a>
                 {% endif %}
             </td>
         </tr>
