--- a/competitions/templates/competitions/overview.html
+++ b/competitions/templates/competitions/overview.html
@@ -6,6 +6,7 @@
     <h1>{{ activity.name }}: Matches & Turniere</h1>
     <p>{% include 'activity/location_selection.html' %}</p>
     <h2>Turniere</h2>
+    <p><a href="{% url 'competitions:create_tournament' activity.id %}">Turnier erstellen</a></p>
     <h2>Öffentliche Matches</h2>
     <p>
         <a href="{% url 'competitions:create_match' activity.id %}">Match erstellen</a>
