--- a/account/templates/account/edit_address.html
+++ b/account/templates/account/edit_address.html
@@ -11,6 +11,6 @@
         <input type="submit" value="Ändern">
     </form>
     {% if sent %}
-        <p>Neue Adresse gespeichert: <b>{{ location.full_address }}</b></p>
+        <p>Neue Adresse gespeichert: <b>{{ user.location.full_address }}</b></p>
     {% endif %}
 {% endblock %}
