--- a/competitions/templates/competitions/full_table.html
+++ b/competitions/templates/competitions/full_table.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <h1>Tabelle</h1>
+    <p>Von: <a href="{{ tournament.get_absolute_url }}">{{ tournament }}</a></p>
     <table>
         <tr>
             <th>Rang</th>
