--- a/competitions/templates/competitions/change_score.html
+++ b/competitions/templates/competitions/change_score.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}{% endblock %}
+{% block title %}Ergebnisse eintragen{% endblock %}
 
 {% block content %}
-
+    <h1>Ergebnisse Eintragen: Runde {{ round.number }}</h1>
+    <p>Nutzen Sie folgendes Formular, um die Ergebnisse des Matches einzutragen.</p>
+    <form method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <input type="submit" value="Fertig">
+    </form>
 {% endblock %}
