--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -8,6 +8,6 @@
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <p><input type="submit" value="Senden"</p>
+        <p><input type="submit" value="Senden"></p>
     </form>
 {% endblock %}
