--- a/wall/templates/wall/post/post_loop.html
+++ b/wall/templates/wall/post/post_loop.html
@@ -1,10 +1,10 @@
 {% load wall_tags %}
 {% for post in posts %}
-    <p>
+    <p><b><i>
         {{ post.created }}, <a href="{{ post.category.get_absolute_url }}">{{ post.category.verbose }}</a>{% if post.activity %}: <a href="{{ post.activity.get_absolute_url }}">{{ post.activity }}</a>{% endif %}, von <a href="{{ post.author.get_absolute_url }}">{{ post.author }}</a>{% if post.group %} (<a href="{{ post.group.get_absolute_url }}">{{ post.group }}</a>){% endif %}
         {% if post.author == user %}
             <a href="{% url 'wall:delete_post' post.id request.path %}">[Löschen]</a>
-        {% endif %}: {{ post.message|markdown }}
+        {% endif %}</b></i>: {{ post.message|markdown }}
         {% if post.audio %}
             <audio controls>
                 <source src="{{ post.audio.url }}" type="{{ post.media_mime_type }}">
@@ -20,8 +20,10 @@
             <br/>
             <a href="{{ comment.author.get_absolute_url }}">{{ comment.author }}</a>, vor {{ comment.created|timesince }}{% if comment.author == user %} <a href="{% url 'wall:delete_comment' comment.id request.path %}">[Löschen]</a>{% endif %}: {{ comment.message }}
         {% endfor %}
-        <br/><a href="{% url 'wall:create_comment' post.id request.path %}">Kommentieren...</a>
+        <a href="{% url 'wall:create_comment' post.id request.path %}">Kommentieren...</a>
     {% empty %}
         <b>Keine.</b>
     </p>
 {% endfor %}
+<p></p>
+{% include "account/pagination.html" with page=posts %}
