--- a/account/templates/registration/password_reset_email.html
+++ b/account/templates/registration/password_reset_email.html
@@ -1,3 +1,3 @@
-Jemand hat auf aktivitaeten.de um eine Passwort-Zurücksetzung gebeten und folgende E-Mail angegeben: {{ email }}. Fals Sie ihr Passwort zurücksetzen wollen, folgen Sie diesem Link:
+Jemand hat auf myactivities.net  um eine Passwort-Zurücksetzung gebeten und folgende E-Mail angegeben: {{ email }}. Falls Sie Ihr Passwort zurücksetzen wollen, folgen Sie diesem Link:
 {{ protocol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}
 Falls Sie es vergessen haben sollten, Ihr Nutzername lautet: {{ user.get_username }}
