--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -3,6 +3,20 @@
 {% block title %}Einloggen{% endblock %}
 
 {% block content %}
+<p>
+        Herzlich willkommen auf myactivities.net. Sagen wir, Sie spielen gerne Schach und Gitarre. Sie suchen einen Gegner und eine Band, möglichst in Ihrer Stadt. Dann tun Sie folgendes:
+        <ol>
+                <li>Sie registrieren sich und geben die Stadt an, in der Sie wohnen.</li>
+                <li>Einmal eingeloggt, können Sie unter "Aktivitäten" die Akvitität "Schach spielen" auswählen und ihr beitreten.</li>
+                <li>Über die Mitgliederliste finden Sie Menschen in Ihrer Stadt/Ihrem Landkreis/Ihrem Bundesland, die auch gerne Schach spielen. Falls Sie mit jemandem Kontakt aufnehmen wollen, schicken Sie dieser Person einfach eine Freundschaftsanfrage.</li>
+                <li>Unter "Matches und Turniere" finden Sie zurzeit in Ihrer Gegend stattfindende Veranstaltungen, auf die Sie sich bewerben können. Sie können auch ganz einfach eigene Matches und Turniere erstellen. In einem Turnier werden nach dem Schweizer System Spielpläne (Runden) und eine Punktetabelle mit Tie-Breaks generiert (vom Spiel abhängig).</li>
+                <li>Die Aktivität "Gitarre spielen" liegt in der Kategorie "Musik". Auf der Kategorieseite können Sie nach Gruppen in Ihrer Umgebung suchen, die offene Leerstellen haben. Sie können auch selbst eine Gruppe gründen und so nach Musikern suchen.</li>
+                <li>In einer Gruppe können Sie Terminabstimmungen für ein Treffen erstellen. Suchen Sie nach Mitgliedern, erzeugen Sie einfach eine Leerstelle und geben dort Bewerbungskriterien wie Alter, Wohnort oder Geschlecht an, z. B.: Bassist gesucht, Alter zwischen 20-30, Geschlecht egal, Wohnort Oldenburg.</li>
+                <li>Jede Gruppe und jeder Nutzer kann in einer Kategorie bzw. einer Aktivität etwas posten. Die Posts sind über die jeweilige Aktivitäts- bzw. Gruppenseite zu sehen und werden dort nach Stadt/Landkreis/Bundesland gefiltert. Natürlich sind die Posts auch über die Profilseite des Nutzers bzw. der Gruppe erreichbar.</li>
+                <li>Für jede Freundschaft, jede Gruppe, jede Bewerbung, jedes Match und jedes Turnier gibt es einen eigenen Chat.</li>
+                <li>Gruppen können in jeder Kategorie gegründet werden. Matches und Turniere stehen nur bei wettkampffähigen Kategorien zur Verfügung.</li>
+        </ol>
+</p>
     <h1>Einloggen</h1>
     {% if form.errors %}
         <p>Fehler beim Einloggen: {{ form.non_field_errors }}</p>
