--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block domready %}
-    var url = 'ws://' + window.location.host + '/ws/chat/room/' + '{{ room.target_ct.app_label }}/{{ room.target_ct.model }}/{{ room.target_id }}/';
+    var url = 'wss://' + window.location.host + '/ws/chat/room/' + '{{ room.target_ct.app_label }}/{{ room.target_ct.model }}/{{ room.target_id }}/';
     var chatSocket = new WebSocket(url);
     var $chat = $('#chat');
 
