--- a/account/templates/account/detail.html
+++ b/account/templates/account/detail.html
@@ -25,7 +25,7 @@
         <p>{% trans "Adresse" %}: {{ viewed_user.location.full_address }}</p>
         <p>{% trans "Neueste Aktivitäten" %}:</p>
         {% include 'actions/forloop.html' %}
-    <p>{% trans "Sie sind mit" %} {{ viewed_user.first_name }} {{ viewed_user.last_name }} {% trans "befreundet. Falls Sie das ändern möchten, können Sie die Freundschaft" %} <a href="{% url 'account:destroy_friendship' viewed_user.id %}">{% trans "auch vernichten" %}.</a></p>
+    <p>{% trans "Sie sind mit" %} {{ viewed_user.get_full_name }}{% trans "befreundet. Falls Sie das ändern möchten, können Sie die Freundschaft" %} <a href="{% url 'account:destroy_friendship' viewed_user.id %}">{% trans "auch vernichten" %}.</a></p>
     {% else %}
         {% blocktrans with user=viewed_user.username%}Sie sind nicht mit {{ user }} befreundet {% endblocktrans %}.
         {% if requested %}
