--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -4,6 +4,7 @@
 {% block title %}{% blocktrans %}Registrieren{% endblocktrans %}{% endblock %}
 
 {% block content %}
+<div class="register">
     <h1>{% blocktrans %}Registrieren{% endblocktrans %}</h1>
     <p>{% blocktrans %}Sie können sich mit dem folgenden Formular registrieren. {% endblocktrans %}</p>
     <form method="post">
@@ -13,4 +14,5 @@
         {% csrf_token %}
         <input type="submit" value="{% blocktrans %}Registrieren{% endblocktrans %}">
     </form>
+    </div>
 {% endblock %}
