--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block domready %}
-    var url = 'wss://' + window.location.host + '/ws/chat/room/' + '{{ room.target_ct.app_label }}/{{ room.target_ct.model }}/{{ room.target_id }}/';
+    var url = 'ws://' + window.location.host + '/ws/chat/room/' + '{{ room.target_ct.app_label }}/{{ room.target_ct.model }}/{{ room.target_id }}/';
     var chatSocket = new WebSocket(url);
     var $chat = $('#chat');
 
@@ -45,6 +45,7 @@
 
             $chat.append('<div class="message"><b>' + name + ', ' + datetime + ' Uhr:</b> ' + message + '</div>');
             $chat.scrollTop($chat[0].scrollHeight);
+            playSound();
         }
     };
 
